Feat: Full profiling code with dynamic loading for all microservices. - Dynamic loading workds for (1) Change of batch size (done) (2) Change of Engine file (memory leaking still) (3) Change of GPU index (unexplicable errors still)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -121,8 +121,8 @@ add_subdirectory(libs/movenet)
 add_subdirectory(libs/emotionnet)
 add_subdirectory(libs/gender)
 add_subdirectory(libs/age)
-add_subdirectory(libs/controller)
-add_subdirectory(libs/device_agent)
+# add_subdirectory(libs/controller)
+# add_subdirectory(libs/device_agent)
 
 # add_library(PipePlusPlus
 #         src/main.cpp)
@@ -151,14 +151,14 @@ add_subdirectory(libs/device_agent)
 # add_executable(run src/main.cpp)
 # target_link_libraries(run PipePlusPlus)
 
-add_executable(DeviceAgent libs/device_agent/device_agent.cpp)
-target_link_libraries(DeviceAgent device_agent)
+# add_executable(DeviceAgent libs/device_agent/device_agent.cpp)
+# target_link_libraries(DeviceAgent device_agent)
 
-add_executable(Controller libs/controller/controller.cpp)
-target_link_libraries(Controller controller)
+# add_executable(Controller libs/controller/controller.cpp)
+# target_link_libraries(Controller controller)
 
-add_executable(Container_DataSource libs/data_source/data_source.cpp)
-target_link_libraries(Container_DataSource data_source)
+# add_executable(Container_DataSource libs/data_source/data_source.cpp)
+# target_link_libraries(Container_DataSource data_source)
 
 add_executable(Container_Yolov5 libs/yolov5/yolov5.cpp)
 target_link_libraries(Container_Yolov5 yolov5)
@@ -166,8 +166,8 @@ target_link_libraries(Container_Yolov5 yolov5)
 add_executable(Container_Yolov5-plate libs/yolov5-plate/yolov5-plate.cpp)
 target_link_libraries(Container_Yolov5-plate yolov5-plate)
 
-# add_executable(convert_onnx2trt libs/onnx2trt/onnx2trt.cpp)
-# target_link_libraries(convert_onnx2trt onnx2trt)
+# # add_executable(convert_onnx2trt libs/onnx2trt/onnx2trt.cpp)
+# # target_link_libraries(convert_onnx2trt onnx2trt)
 
 add_executable(Container_RetinaFace libs/retinaface/retinaface.cpp)
 target_link_libraries(Container_RetinaFace retinaface)
