--- a/libs/communicator/CMakeLists.txt
+++ b/libs/communicator/CMakeLists.txt
@@ -34,6 +34,7 @@ set(
 # All source files and private header files go here.
 set(
         SOURCE_FILES
+        ./communicator.cpp
         ./receiver.cpp
         ./sender.cpp
 )
