Feat: Agent loading config from a single json to avoid having to change all model code when, for instance, we want parse some new value to agents

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -169,8 +169,8 @@ target_link_libraries(Container_Yolov5 yolov5)
 add_executable(Container_Yolov5-plate libs/yolov5-plate/yolov5-plate.cpp)
 target_link_libraries(Container_Yolov5-plate yolov5-plate)
 
-add_executable(convert_onnx2trt libs/onnx2trt/onnx2trt.cpp)
-target_link_libraries(convert_onnx2trt onnx2trt)
+# add_executable(convert_onnx2trt libs/onnx2trt/onnx2trt.cpp)
+# target_link_libraries(convert_onnx2trt onnx2trt)
 
 add_executable(Container_RetinaFace libs/retinaface/retinaface.cpp)
 target_link_libraries(Container_RetinaFace retinaface)
