Add dockerfile for xavier agx and xavier nx (built and compiled successfully

--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -1,5 +1,5 @@
 # Use the base image
-FROM nvcr.io/nvidia/l4t-ml:r35.2.1-py3
+FROM 143.248.55.42:5000/nvcr.io/nvidia/l4t-ml:r35.1.0-py3
 
 # Install required packages
 RUN apt update && apt install -y \
@@ -83,6 +83,9 @@ RUN apt install libspdlog-dev -y
 # Install posgresql-client
 RUN apt install postgresql-client -y
 
+# Install LightGBM
+# ARG GRPC_INSTALL_DIR=/lightgbm
+# RUN mkdir -p ${GRPC_INSTALL_DIR}
 # Store load time model
 ARG upload_model="upload_model.txt"
 ARG download_model="download_model.txt"
@@ -98,7 +101,6 @@ RUN git clone --recursive https://github.com/microsoft/LightGBM && \
     cmake -B build -S . -DCMAKE_INSTALL_PREFIX=/usr && \
     cmake --build build -j4 && \
     cmake --install build
-
 
 RUN apt install gdb -y
 
@@ -119,5 +121,3 @@ ENV HOME=/home/${user}
 
 
 CMD [ "/bin/bash" ]
-
-
