--- a/dockerfiles/DOCKERFILE-amd64
+++ b/dockerfiles/DOCKERFILE-amd64
@@ -153,16 +153,6 @@ RUN cd /grpc-src && \
     make install
 ENV PATH="${PATH}:${GRPC_INSTALL_DIR}/bin"
 
-
-# Install LightGBM
-ARG GRPC_INSTALL_DIR=/lightgbm
-RUN mkdir -p ${GRPC_INSTALL_DIR}
-RUN git clone --recursive https://github.com/microsoft/LightGBM && \
-    cd LightGBM && \
-    cmake -B build -S . -DCMAKE_INSTALL_PREFIX=/usr && \
-    cmake --build build -j4 && \
-    cmake --install build
-
 # Install Boost
 RUN wget https://boostorg.jfrog.io/artifactory/main/release/1.84.0/source/boost_1_84_0.tar.gz
 RUN tar xvf boost_1_84_0.tar.gz
@@ -177,6 +167,22 @@ RUN apt install postgresql-client libspdlog-dev -y
 
 # GDB for debugging
 RUN apt install gdb -y
+
+# Store load time model
+ARG upload_model="upload_model.txt"
+ARG download_model="download_model.txt"
+COPY ${upload_model} /ltmodel
+COPY ${download_model} /ltmodel
+
+# Install LightGBM
+ARG LIGHTGBM_SRC_DIR=/lightgbm-src
+RUN mkdir -p ${LIGHTGBM_SRC_DIR}
+RUN cd lightgbm-src
+RUN git clone --recursive https://github.com/microsoft/LightGBM && \
+    cd LightGBM && \
+    cmake -B build -S . -DCMAKE_INSTALL_PREFIX=/usr && \
+    cmake --build build -j4 && \
+    cmake --install build
 
 # Add more libraries here if needed
 
