--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -83,14 +83,22 @@ RUN apt install libspdlog-dev -y
 # Install posgresql-client
 RUN apt install postgresql-client -y
 
+# Store load time model
+ARG upload_model="upload_model.txt"
+ARG download_model="download_model.txt"
+COPY ${upload_model} /ltmodel
+COPY ${download_model} /ltmodel
+
 # Install LightGBM
-ARG GRPC_INSTALL_DIR=/lightgbm
-RUN mkdir -p ${GRPC_INSTALL_DIR}
+ARG LIGHTGBM_SRC_DIR=/lightgbm-src
+RUN mkdir -p ${LIGHTGBM_SRC_DIR}
+RUN cd lightgbm-src
 RUN git clone --recursive https://github.com/microsoft/LightGBM && \
     cd LightGBM && \
     cmake -B build -S . -DCMAKE_INSTALL_PREFIX=/usr && \
     cmake --build build -j4 && \
     cmake --install build
+
 
 RUN apt install gdb -y
 
