--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,6 +85,11 @@ find_package(OpenCV REQUIRED)
 find_package(CUDAToolkit REQUIRED)
 # find_package(LightGBM REQUIRED)
 
+# Manually specify the path to Python
+set(PYTHON_INCLUDE_DIRS "/usr/include/python3.8")
+set(PYTHON_LIBRARIES "/usr/lib/python3.8")
+include_directories(${PYTHON_INCLUDE_DIRS})
+
 # Find Protobuf installation
 option(protobuf_MODULE_COMPATIBLE TRUE)
 find_package(Protobuf CONFIG REQUIRED)
@@ -147,6 +152,7 @@ target_include_directories(PipePlusPlusSink PUBLIC
         ${OpenCV_INCLUDE_DIRS}
         ${CUDA_INCLUDE_DIRS}
         ${TensorRT_INCLUDE_DIRS}
+        ${PYTHON_INCLUDE_DIRS}
         $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/../libs/protobufprotocols>)
 target_link_libraries(PipePlusPlusSink PUBLIC
         data_grpc_proto
@@ -157,6 +163,7 @@ target_link_libraries(PipePlusPlusSink PUBLIC
         ${_GRPC_GRPCPP}
         ${_REFLECTION}
         ${_PROTOBUF_LIBPROTOBUF}
+        ${PYTHON_LIBRARIES}
         misc
         microservice
         communicator
@@ -169,8 +176,8 @@ target_link_libraries(runSink PipePlusPlusSink)
 add_executable(Communicator libs/communicator/communicator.cpp)
 target_link_libraries(Communicator communicator)
 
-add_executable(DeviceAgent libs/device_agent/device_agent.cpp)
-target_link_libraries(DeviceAgent device_agent)
+# add_executable(DeviceAgent libs/device_agent/device_agent.cpp)
+# target_link_libraries(DeviceAgent device_agent)
 
 add_executable(Controller libs/controller/controller.cpp)
 target_link_libraries(Controller controller)
@@ -207,3 +214,6 @@ target_link_libraries(Container_Age age)
 
 add_executable(Container_CarBrand libs/carbrand/carbrand.cpp)
 target_link_libraries(Container_CarBrand carbrand)
+
+add_executable(Profiler libs/device_agent/profiler.cpp)
+target_link_libraries(Profiler device_agent)
