--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -176,8 +176,8 @@ target_link_libraries(runSink PipePlusPlusSink)
 add_executable(Communicator libs/communicator/communicator.cpp)
 target_link_libraries(Communicator communicator)
 
-# add_executable(DeviceAgent libs/device_agent/device_agent.cpp)
-# target_link_libraries(DeviceAgent device_agent)
+add_executable(DeviceAgent libs/device_agent/device_agent.cpp)
+target_link_libraries(DeviceAgent device_agent)
 
 add_executable(Controller libs/controller/controller.cpp)
 target_link_libraries(Controller controller)
@@ -191,8 +191,8 @@ target_link_libraries(Container_Yolov5 yolov5)
 add_executable(Container_Yolov5-plate libs/yolov5-plate/yolov5-plate.cpp)
 target_link_libraries(Container_Yolov5-plate yolov5-plate)
 
-add_executable(convert_onnx2trt libs/onnx2trt/onnx2trt.cpp)
-target_link_libraries(convert_onnx2trt onnx2trt)
+#add_executable(convert_onnx2trt libs/onnx2trt/onnx2trt.cpp)
+#target_link_libraries(convert_onnx2trt onnx2trt)
 
 add_executable(Container_RetinaFace libs/retinaface/retinaface.cpp)
 target_link_libraries(Container_RetinaFace retinaface)
@@ -215,5 +215,5 @@ target_link_libraries(Container_Age age)
 add_executable(Container_CarBrand libs/carbrand/carbrand.cpp)
 target_link_libraries(Container_CarBrand carbrand)
 
-add_executable(Profiler libs/device_agent/profiler.cpp)
-target_link_libraries(Profiler device_agent)
+# add_executable(Profiler libs/device_agent/profiler.cpp)
+# target_link_libraries(Profiler device_agent)
