Feat: Controller reads configuration from file

--- a/libs/controller/CMakeLists.txt
+++ b/libs/controller/CMakeLists.txt
@@ -77,6 +77,8 @@ target_include_directories(controller
 target_link_libraries(controller
         PUBLIC
         control_grpc_proto
+        absl::flags
+        absl::flags_parse
         ${_GRPC_GRPCPP}
         ${_REFLECTION}
         ${_PROTOBUF_LIBPROTOBUF}
