--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,18 +134,18 @@ else()
     set(CUDA_TOOLKIT_ROOT_DIR /usr/local/cuda)
 
     # Set LightGBM include directories
-    set(LIGHTGBM_INCLUDE_DIR "/usr/include/LightGBM")
-    include_directories(${LIGHTGBM_INCLUDE_DIR})
+    # set(LIGHTGBM_INCLUDE_DIR "/usr/include/LightGBM")
+    # include_directories(${LIGHTGBM_INCLUDE_DIR})
 
     # Find LightGBM library
-    find_library(LIGHTGBM_LIBRARY
-    NAMES lib_lightgbm.so
-    PATHS "/usr/lib"
-    NO_DEFAULT_PATH)
+    # find_library(LIGHTGBM_LIBRARY
+    # NAMES lib_lightgbm.so
+    # PATHS "/usr/lib"
+    # NO_DEFAULT_PATH)
 
-    if(NOT LIGHTGBM_LIBRARY)
-        message(FATAL_ERROR "LightGBM library not found.")
-    endif()
+    # if(NOT LIGHTGBM_LIBRARY)
+    #     message(FATAL_ERROR "LightGBM library not found.")
+    # endif()
 
     find_package(Threads REQUIRED)
 
