feat: deconstruct device communication

--- a/libs/controller/CMakeLists.txt
+++ b/libs/controller/CMakeLists.txt
@@ -119,7 +119,8 @@ target_include_directories(controller
 
 target_link_libraries(controller
         PUBLIC
-        control_grpc_proto
+        control_comm_grpc_proto
+        control_mess_grpc_proto
         absl::flags
         absl::flags_parse
         ${_GRPC_GRPCPP}
