--- a/libs/container_agent/CMakeLists.txt
+++ b/libs/container_agent/CMakeLists.txt
@@ -46,6 +46,9 @@ find_package(communicator CONFIG REQUIRED)
 set(controller_DIR "${CMAKE_CURRENT_BINARY_DIR}/../controller")
 find_package(controller CONFIG REQUIRED)
 
+set(baseprocessors_DIR "${CMAKE_CURRENT_BINARY_DIR}/../baseprocessors")
+find_package(baseprocessors CONFIG REQUIRED)
+
 # Defines the headers for this library.
 # https://cmake.org/cmake/help/v3.11/command/target_include_directories.html
 target_include_directories(container_agent
@@ -78,6 +81,7 @@ target_link_libraries(container_agent
         microservice
         controller
         communicator
+        baseprocessors
 )
 
 # add_executable(ContainerAgent container_agent.cpp)
