Feat: Functional separated batcher without timing

--- a/libs/baseprocessors/CMakeLists.txt
+++ b/libs/baseprocessors/CMakeLists.txt
@@ -35,7 +35,8 @@ set(
 set(
         SOURCE_FILES
         baseutils.cpp
-        basereqbatcher.cpp
+        basepreprocessor.cpp
+        basebatcher.cpp
         basebatchinferencer.cpp
         basebboxcropper.cpp
         basebboxcropperaugmentation.cpp
