Fix: Dockerfiles and cmakelists to build for jetson devices

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,7 +120,11 @@ if (${SYSTEM_NAME} STREQUAL "FCPO")
     if (${DEVICE_ARCH} STREQUAL "amd64")
         list(APPEND CMAKE_PREFIX_PATH /libtorch)
     else()
-        set (Torch_DIR /home/cdsn/.local/lib/python3.8/site-packages/torch/share/cmake/Torch)
+        if (${ON_HOST} STREQUAL "ON")
+            set (Torch_DIR /home/cdsn/.local/lib/python3.8/site-packages/torch/share/cmake/Torch)
+        else()
+            set (Torch_DIR /usr/local/lib/python3.8/dist-packages/torch/share/cmake/Torch)
+        endif()
     endif()
     find_package(Torch REQUIRED)
 endif()
@@ -151,7 +155,7 @@ find_package(PkgConfig REQUIRED)
 pkg_check_modules(LIBPQXX REQUIRED libpqxx)
 
 add_subdirectory(libs/misc)
-add_subdirectory(libs/profiler)
+add_subdirectory(libs/utils/profiler)
 add_subdirectory(libs/microservice)
 add_subdirectory(libs/utils/protobufprotocols)
 
