--- a/libs/device_agent/CMakeLists.txt
+++ b/libs/device_agent/CMakeLists.txt
@@ -55,7 +55,7 @@ target_compile_features(device_agent
 # we can have multiple versions installed at the same time.
 set(PROJECT_PREFIX device_agent)
 
-set (profiler_DIR "${CMAKE_CURRENT_BINARY_DIR}/../profiler")
+set (profiler_DIR "${CMAKE_CURRENT_BINARY_DIR}/../utils/profiler")
 find_package(profiler CONFIG REQUIRED)
 
 set(microservice_DIR "${CMAKE_CURRENT_BINARY_DIR}/../microservice")
