--- a/libs/utils/profiler/CMakeLists.txt
+++ b/libs/utils/profiler/CMakeLists.txt
@@ -55,6 +55,7 @@ target_compile_features(profiler
 # we can have multiple versions installed at the same time.
 set(PROJECT_PREFIX profiler)
 
+find_package(Python COMPONENTS Development REQUIRED)
 
 # Defines the headers for this library.
 # https://cmake.org/cmake/help/v3.11/command/target_include_directories.html
@@ -65,6 +66,7 @@ target_include_directories(profiler
             # Used when installing the library:
             $<INSTALL_INTERFACE:${PROJECT_PREFIX}>
             ${CUDA_INCLUDE_DIRS}
+            ${Python_INCLUDE_DIRS}
         PRIVATE
             # Used only when building the library:
             src)
@@ -75,6 +77,7 @@ target_link_libraries(profiler
         absl::flags_parse
         ${CMAKE_THREAD_LIBS_INIT}
         ${CUDA_LIBRARIES}
+        ${Python_LIBRARIES}
         CUDA::nvml
         cuda
 )
