--- a/libs/container_agent/CMakeLists.txt
+++ b/libs/container_agent/CMakeLists.txt
@@ -34,7 +34,11 @@ set(PROJECT_PREFIX container_agent)
 
 find_package(Threads REQUIRED)
 
-set (profiler_DIR "${CMAKE_CURRENT_BINARY_DIR}/../utils/profiler")
+if (DEVICE_ARCH STREQUAL "amd64")
+    set (profiler_DIR "${CMAKE_CURRENT_BINARY_DIR}/../utils/profiler")
+else ()
+    set (profiler_DIR "${CMAKE_CURRENT_BINARY_DIR}/../utils/profiler-jetson")
+endif ()
 find_package(profiler CONFIG REQUIRED)
 
 set(microservice_DIR "${CMAKE_CURRENT_BINARY_DIR}/../microservice")
